fixed layout without z-index hack

--- a/components/terminus/Blockly/BlocklyComponent.module.css
+++ b/components/terminus/Blockly/BlocklyComponent.module.css
@@ -1,11 +1,7 @@
 .blocklyDiv {
-  height: 100%;
-  max-height: 100%;
-  width: 100%;
-  max-width: 100%;
+  height: calc(100% - 151px);
+  width: calc(100% - 256px);
   position: absolute;
-  top: 0;
-  left: 0;
-  padding-left: 256px;
-  padding-top: 63px;
+  top: 151px;
+  left: 256px;
 }
